kubernetes/apps/talos1018/bricktracker/app/service.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: v1
kind: Service
metadata:
  name: bricktracker-http
  labels:
    app.kubernetes.io/name: bricktracker
spec:
  ports:
    - port: 3333
      targetPort: 3333
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bricktracker
