kubernetes/apps/talos1018/bricktracker/app/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bricktracker
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: sh-bricktracker.png
    gethomepage.dev/name: BrickTracker
    gethomepage.dev/app: bricktracker
    gethomepage.dev/description: LEGO sets tracker
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "bricktracker.${CLUSTER_DOMAIN}"
      secretName: bricktracker-tls
  rules:
    - host: "bricktracker.${CLUSTER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bricktracker-http
                port:
                  number: 3333
